--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -6,23 +6,7 @@
   margin-inline: 120px;
 }
 
-img {
+/* img {
   width: 50px;
   height: 50px;
-}
-
-hr {
-  border: 2px solid #f2d00c;
-  margin: 0;
-}
-
-.login {
-  font-weight: 600;
-  background-color: #f2d00c;
-  color: #3e4a7a;
-}
-
-.login:hover {
-  background-color: #3e4a7a;
-  color: #f2d00c;
-}
+} */
