--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,8 +1,8 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  margin: 40px 120px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  margin: 40px 120px 80px 120px;
   padding: 0;
   list-style-type: none;
 }
@@ -14,9 +14,17 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  border: 2px solid #f2d00c;
+  border: 2px solid #f9f9f9;
+  border-radius: 10px;
   padding: 10px;
   font-weight: 600;
+  text-transform: uppercase;
+  color: #3e4a7a;
+}
+
+.item:hover {
+  border: 2px solid #dededf;
+  color: #22335f;
 }
 
 .item img {
