--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,18 +1,20 @@
-body {
-  margin: 0;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f4f4f4; /* Добавим цвет фона */
+  background-color: #f4f4f4;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-  color: #333; /* Цвет текста заголовка */
+  color: #333;
 }
 
 form {
@@ -20,45 +22,44 @@ form {
   flex-direction: column;
   width: 300px;
   margin: 20px;
-  background-color: #fff; /* Цвет фона формы */
+  background-color: #fff;
   padding: 20px;
-  border-radius: 8px; /* Закруглим углы формы */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Добавим тень */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 label {
   margin-bottom: 10px;
   display: flex;
-  flex-direction: column; /* Поставим элементы формы друг под друга */
+  flex-direction: column;
 }
 
-input {
+.input {
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ccc; /* Добавим границу для инпутов */
-  border-radius: 4px; /* Закруглим углы инпутов */
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-button {
+.button {
   background-color: #3e4a7a;
-
   color: white;
   padding: 10px;
   border: none;
   cursor: pointer;
-  border-radius: 4px; /* Закруглим углы кнопки */
+  border-radius: 4px;
 }
 
-button:hover {
+.button:hover {
   background-color: #22335f;
 }
 
-p a {
+.link {
   color: #3498db;
   text-decoration: none;
   margin-top: 10px;
 }
 
-p a:hover {
+.link:hover {
   text-decoration: underline;
 }
