--- a/src/pages/Phone/Phone.module.css
+++ b/src/pages/Phone/Phone.module.css
@@ -32,6 +32,7 @@ h2 {
   border: 2px solid #22335f;
   border-radius: 10px;
   margin-block: 20px;
+  transform: rotate(230deg);
 }
 
 .productInfo {
@@ -68,6 +69,7 @@ h2 {
 }
 
 .productImage img {
+  border-radius: 10px 0 0 10px;
   width: 100%;
   height: 100%;
 }
